# RL_Book

./: .gitignore
python3_codes/: pyproject.toml
python3_codes/fig2_6/: 10_bandit-epsilon_0.py  10_bandit-epsilon_01.py  10_bandit-epsilon_08.py
python3_codes/fig2_8/: fig2_8.py
